--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_padding">2dp</dimen>
+    <dimen name="left_column_width">80dp</dimen>
+    <dimen name="margin_bottom_boxes">20dp</dimen>
+    <dimen name="margin_bottom_first_inner_box">12dp</dimen>
+    <dimen name="et_height">72dp</dimen>
+
+
+    <dimen name="text_size_big">24sp</dimen>
+    <dimen name="text_size_standard">18sp</dimen>
+    <dimen name="text_size_options">14sp</dimen>
+
+
+
 </resources>
