provider implemented - preferenceactivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,116 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/activity_padding"
-    tools:context=".MainActivity" android:orientation="vertical"
-    android:background="@color/blue">
 
-    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
-    <LinearLayout
-        android:focusable="true" android:focusableInTouchMode="true"
-        android:layout_width="0px" android:layout_height="0px"/>
-
-    <!-- box1 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <TextView android:text="@string/origin_title" android:layout_width="@dimen/left_column_width"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/text_size_big"
-            android:textStyle="bold"
-            android:gravity="center_horizontal"
-            android:textColor="@color/orange" />
-
-        <!-- box1b -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="@dimen/margin_bottom_boxes">
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/et_height"
-                android:id="@+id/origin_spinner"
-                android:layout_marginBottom="@dimen/margin_bottom_first_inner_box"
-                />
+<!-- Dummy item to prevent AutoCompleteTextView from receiving focus
+<LinearLayout
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:layout_width="0px"
+    android:layout_height="0px"
+    xmlns:android="http://schemas.android.com/apk/res/android" /> -->
 
 
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextView1"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/et_height"
-                android:textColorHint="@color/lightgrey"
-                android:hint="@string/address_hint"
-                android:textSize="@dimen/text_size_standard"
-                android:textColor="@color/lightgrey">
-            </AutoCompleteTextView>
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:padding="@dimen/activity_padding"
-        android:background="@color/orange"/>
-
-    <!-- box2 -->
-    <LinearLayout
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_main"
+    android:name="com.example.android.taxi_fares_lima.MainFragment"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-
-
-    <TextView android:text="@string/destination_title" android:layout_width="@dimen/left_column_width"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/text_size_big"
-            android:textStyle="bold"
-            android:gravity="center_horizontal"
-            android:textColor="@color/orange" />
-
-    <!-- box2b -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/margin_bottom_boxes">
-
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/et_height"
-            android:id="@+id/destination_spinner"
-            android:layout_marginBottom="@dimen/margin_bottom_first_inner_box" />
-
-
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView2"
-            android:textColorHint="@color/lightgrey"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/et_height"
-            android:hint="@string/address_hint"
-            android:textSize="@dimen/text_size_standard"
-            android:textColor="@color/lightgrey">
-        </AutoCompleteTextView>
-    </LinearLayout>
-    </LinearLayout>
+    android:layout_height="match_parent"
+    tools:context="com.example.android.taxi_fares_lima.MainFragment"
+    />
 
 
 
-<Button
-        android:padding="20dp"
-        android:textSize="@dimen/text_size_big"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="@string/get_rate_button_text"
-        android:id="@+id/get_rate_button"
-        android:gravity="center"
-        android:background="@color/blue"
-        android:textColor="@color/orange"/>
 
-</LinearLayout>
+
+
+
