--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,8 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="@dimen/text_size_standard"
     android:gravity="left"
-    android:textColor="@color/lightgrey"
     android:padding="5dp"
+    android:textColor="@color/darkgrey"
+    android:textSize="@dimen/text_size_standard"
     />
