--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,14 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="activity_padding">2dp</dimen>
+    <dimen name="activity_padding">4dp</dimen>
     <dimen name="left_column_width">80dp</dimen>
-    <dimen name="margin_bottom_boxes">20dp</dimen>
-    <dimen name="margin_bottom_first_inner_box">12dp</dimen>
+    <dimen name="margin_bottom_boxes">24dp</dimen>
+    <dimen name="margin_bottom_top_first_inner_box">14dp</dimen>
     <dimen name="et_height">72dp</dimen>
+    <dimen name="padding_left_headers">12dp</dimen>
 
 
-    <dimen name="text_size_big">24sp</dimen>
+    <dimen name="text_size_big">28sp</dimen>
     <dimen name="text_size_standard">18sp</dimen>
     <dimen name="text_size_options">14sp</dimen>
 
