--- a/app/src/main/res/layout/fragment_response.xml
+++ b/app/src/main/res/layout/fragment_response.xml
@@ -20,14 +20,6 @@
             android:textSize="24sp"
             />
 
-        <TextView
-            android:id="@+id/rate_value"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=""
-            android:textColor="@color/red"
-            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/rate_unit"
@@ -35,6 +27,98 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/rate_unit"
+            android:textSize="24sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/min_header"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/min_rate_header_string"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/min_rate_value"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textColor="@color/red"
+            android:textSize="20sp" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/max_rate_header"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/max_rate_header_string"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/max_rate_value"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textColor="@color/red"
+            android:textSize="20sp" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/duration_header"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/duration_header_string"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/duration_value"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textColor="@color/red"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/duration_unit"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/duration_unit"
             android:textSize="24sp"/>
 
     </LinearLayout>
@@ -74,39 +158,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        >
 
-        <TextView
-            android:id="@+id/duration_header"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/duration_header_string"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:id="@+id/duration_value"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=""
-            android:textColor="@color/red"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/duration_unit"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="@string/duration_unit"
-            android:textSize="24sp"/>
-
-    </LinearLayout>
 
 
     <TextView
