--- a/app/src/main/res/xml/fragment_preference.xml
+++ b/app/src/main/res/xml/fragment_preference.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
-        defaultValue="PEN"
+        android:defaultValue="PEN"
         android:entries="@array/currencylistentries"
         android:entryValues="@array/currencylistvalues"
         android:key="CURRENCY"
