--- a/app/src/main/res/xml/headers_preference.xml
+++ b/app/src/main/res/xml/headers_preference.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- not used coz no headers -->
+<!-- NOT USED coz no headers -->
 
 <preference-headers
     xmlns:android="http://schemas.android.com/apk/res/android">
