--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,14 +7,13 @@
     android:background="@color/white" android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    android:padding="@dimen/activity_padding"
-    android:paddingRight="12dp"
     tools:context=".MainActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -30,6 +29,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="4dp"
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:src="@drawable/from_icon" />
@@ -41,6 +41,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box" />
 
 
@@ -49,10 +51,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_boxes"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:hint="@string/address_hint"
             android:textColor="@color/darkgrey"
             android:textColorHint="@color/darkgrey"
-            android:textSize="@dimen/text_size_standard">
+            android:textSize="@dimen/text_size_standard"
+            android:textStyle="italic">
         </AutoCompleteTextView>
 
 
@@ -60,6 +65,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -75,9 +81,10 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="4dp"
             android:layout_weight="2"
             android:gravity="center_vertical"
-            android:src="@drawable/to_icon"/>
+            android:src="@drawable/to_icon" />
 
     </LinearLayout>
 
@@ -86,6 +93,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box" />
 
 
@@ -94,10 +103,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_boxes"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:hint="@string/address_hint"
             android:textColor="@color/darkgrey"
             android:textColorHint="@color/darkgrey"
-            android:textSize="@dimen/text_size_standard">
+            android:textSize="@dimen/text_size_standard"
+            android:textStyle="italic">
         </AutoCompleteTextView>
 
 
