--- a/app/src/main/res/layout/fragment_response.xml
+++ b/app/src/main/res/layout/fragment_response.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="2dp"
         android:orientation="horizontal"
         >
 
@@ -15,10 +16,10 @@
             android:id="@+id/rate_header"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:text="@string/normal_rate_header_string"
             android:textSize="24sp"
-            />
+            android:textStyle="bold" />
 
 
         <TextView
@@ -27,14 +28,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/rate_unit"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
         >
 
@@ -42,16 +43,17 @@
             android:id="@+id/min_header"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="4"
             android:text="@string/min_rate_header_string"
             android:textSize="20sp"
-            />
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/min_rate_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text=""
             android:textColor="@color/red"
             android:textSize="20sp" />
@@ -63,7 +65,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="14dp"
         android:orientation="horizontal"
         >
 
@@ -71,16 +73,17 @@
             android:id="@+id/max_rate_header"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="4"
             android:text="@string/max_rate_header_string"
             android:textSize="20sp"
-            />
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/max_rate_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text=""
             android:textColor="@color/red"
             android:textSize="20sp" />
@@ -92,7 +95,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         >
 
@@ -108,7 +111,8 @@
             android:id="@+id/duration_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:gravity="center_horizontal"
             android:text=""
             android:textColor="@color/red"
             android:textSize="20sp" />
@@ -126,7 +130,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="14dp"
         android:orientation="horizontal"
         >
 
@@ -143,7 +147,8 @@
             android:id="@+id/distance_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:gravity="center_horizontal"
             android:text=""
             android:textColor="@color/red"
             android:textSize="20sp" />
