--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
-    android:padding="5dp"
+    android:padding="4dp"
     android:textColor="@color/darkgrey"
     android:textSize="@dimen/text_size_standard"
+    android:textStyle="italic"
     />
