--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
 
     <item android:id="@+id/preferences"
-        android:title="Preferences"></item>
+        android:title="@string/preferences_string"></item>
 
 
 </menu>
