--- a/app/src/main/res/xml/fragment_preference.xml
+++ b/app/src/main/res/xml/fragment_preference.xml
@@ -5,6 +5,6 @@
         android:entries="@array/currencylistentries"
         android:entryValues="@array/currencylistvalues"
         android:key="CURRENCY"
-        android:summary="Choose your preferred currency"
-        android:title="Currency"/>
+        android:summary="@string/choose_currency"
+        android:title="@string/currency_title"/>
 </PreferenceScreen>
