--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,6 +3,7 @@
 
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/spinnerrij"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
