--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         android:weightSum="3">
 
@@ -41,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="26dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box"
             />
@@ -52,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_boxes"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="26dp"
             android:layout_marginRight="20dp"
             android:hint="@string/address_hint"
             android:textColor="@color/darkgrey"
@@ -94,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="26dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box"
             />
@@ -105,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_bottom_boxes"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="26dp"
             android:layout_marginRight="20dp"
             android:hint="@string/address_hint"
             android:textColor="@color/darkgrey"
@@ -120,12 +123,16 @@
         android:id="@+id/get_rate_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/my_button"
+        android:elevation="2dp"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="12dp"
         android:text="@string/get_rate_button_text"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_big"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        />
 
 </LinearLayout>
