--- a/app/src/main/res/layout/fragment_response.xml
+++ b/app/src/main/res/layout/fragment_response.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:orientation="horizontal"
-        >
+        android:layout_marginTop="12dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/rate_header"
